<resources>
    <string name="app_name">trAIner</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dance1">Running man</string>
    <string name="dance1_detail">The famous shuffle move. Dance like Redfoo in Party Rock Anthem!</string>
    <string name="dance_image">dance image</string>
    <string name="learn">Learn</string>
    <string name="Practice">Practice</string>
    <string name="other_details">Other details....</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="trainer">trAIner</string>
</resources>