<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/dance_image"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/second"
                    android:contentDescription="@string/dance_image" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/dance_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginHorizontal="10dp"
                android:text="@string/dance1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dance_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/dance1_detail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>