<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/move_image"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/second"
                     />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/move_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginHorizontal="10dp"
                android:text="@string/dance1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/move_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/dance1_detail"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/move_more_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:text="Other details....about learning, about practiceing... Pls start with learning always etc etc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <Button
                    android:id="@+id/learn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorGradientEnd"
                    android:text="@string/learn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/practice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorGradientEnd"
                    android:text="@string/Practice"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>